--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/content": "^1.5.0",
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.12.0",
+    "contentful": "^7.14.6",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
