--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@nuxt/content": "^1.5.0",
     "@nuxt/typescript-runtime": "^1.0.0",
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/markdownit": "^1.2.10",
     "contentful": "^7.14.6",
+    "markdown-it": "^11.0.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
