--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@nuxtjs/markdownit": "^1.2.10",
     "contentful": "^7.14.6",
     "markdown-it": "^11.0.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "prismjs": "^1.21.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.0",
